--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,12 @@ jobs:
       - uses: hecrj/setup-rust-action@v1
         with:
           rust-version: ${{ matrix.rust }}
-      - uses: actions/checkout@v2
-      - name: Clippy checks
-        run: cargo clippy --verbose
+      - uses: actions/checkout@v3
       - name: Run tests
         run: cargo test --verbose
+      - uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: 1.65.0
+          components: clippy
+      - name: Clippy checks
+        run: cargo clippy --verbose
